# The-Auto-Kraken-MAB

./: .gitignore  HANDOFF.md  README.md  esbuild.config.mjs  eslint.config.js  package-lock.json  package.json  tsconfig.json
public/: manifest.json
python-legacy/: .env.example  README.md  config.example.yaml  pyproject.toml
python-legacy/scripts/: inspect_kraken_page.py  launch_chrome_profile.py
python-legacy/src/kraken_guard/: __init__.py  __main__.py  cli.py  config.py  database.py  logging_setup.py  main.py  models.py
python-legacy/src/kraken_guard/execution/: browser.py  kraken_prop.py  safety.py  selectors.py
python-legacy/src/kraken_guard/market_data/: base.py  fallback.py  kraken_public.py
python-legacy/src/kraken_guard/services/: health.py  notifications.py  scheduler.py
python-legacy/src/kraken_guard/strategy/: signal_engine.py  sma_strategy.py
python-legacy/tests/: test_position_matching.py  test_safety_checks.py  test_signal_deduplication.py  test_sma_strategy.py
src/api/: kraken-public.ts  symbols.ts
tests/: buy-preview.test.ts  buy-signal.test.ts  close-modal-validation.test.ts  daily-goal.test.ts  diagnostics.test.ts  execution-notify.test.ts  execution-safety.test.ts  exit-strategy.test.ts  market-data-table.test.ts  order-form-diagnostics.test.ts  position-parser.test.ts  position-sizing.test.ts  position-state.test.ts  power.test.ts  row-discovery.test.ts  service-worker-continuity.test.ts  session-health.test.ts  sidepanel-ui.test.ts  signal-engine.test.ts  sma.test.ts  volatility-strategy.test.ts  watchdog.test.ts
(+60 files in other folders)
