[project]
name = "kraken-guard"
version = "0.1.0"
description = "Local macOS guard that closes existing Kraken Prop LONG positions on a configurable SMA sell signal."
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.45",
    "pandas>=2.2",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "PyYAML>=6.0",
    "click>=8.1",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs>=2.2",
    "types-PyYAML>=6.0",
]

[project.scripts]
kraken-guard = "kraken_guard.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
